--- a/Src/Zing.Web/Zing.Web.csproj
+++ b/Src/Zing.Web/Zing.Web.csproj
@@ -245,6 +245,7 @@
     </Content>
     <Content Include="Views\Shared\EditorTemplates\DropDownList.cshtml" />
     <Content Include="Views\Home\Edit.cshtml" />
+    <Content Include="Views\Home\Pager.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
