--- a/Src/Zing.Web/Web.config
+++ b/Src/Zing.Web/Web.config
@@ -23,7 +23,7 @@
     <add key="RouteDebugger:Enabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="SqlServer" connectionString="Data Source=phoenix-pc\sql2008_new;Initial Catalog=zing.security;Persist Security Info=True;User ID=sa;Password=050915@hf" />
+    <add name="DefaultConnection" providerName="SqlServer" connectionString="Data Source=.;Initial Catalog=zing.security;Persist Security Info=True;User ID=sa;Password=sa" />
   </connectionStrings>
   <system.web.webPages.razor>
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
@@ -37,6 +37,7 @@
         <add namespace="System.Web.Optimization" />
         <add namespace="System.Linq" />
         <add namespace="System.Collections.Generic" />
+        <add namespace="Zing.UI"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
