--- a/Src/Zing.Web/Web.config
+++ b/Src/Zing.Web/Web.config
@@ -20,7 +20,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="log4net.Config" value="Config\log4net.config" />
-    <add key="RouteDebugger:Enabled" value="true" />
+    <add key="RouteDebugger:Enabled" value="false" />
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" providerName="SqlServer" connectionString="Data Source=.;Initial Catalog=zing.security;Persist Security Info=True;User ID=sa;Password=sa" />
