--- a/Src/Zing.Framework.Tests/packages.config
+++ b/Src/Zing.Framework.Tests/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="3.3.1" targetFramework="net40" />
+  <package id="Autofac" version="3.4.0" targetFramework="net40" />
   <package id="AutoMapper" version="3.2.1" targetFramework="net40" />
   <package id="log4net" version="2.0.3" targetFramework="net40" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net40" />
   <package id="NUnit" version="2.6.3" targetFramework="net40" />
 </packages>
