--- a/Src/Zing/packages.config
+++ b/Src/Zing/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="3.3.1" targetFramework="net40" />
+  <package id="Autofac" version="3.4.0" targetFramework="net40" />
   <package id="Autofac.Mvc4" version="3.1.0" targetFramework="net40" />
   <package id="AutoMapper" version="3.2.1" targetFramework="net40" />
-  <package id="Castle.Core" version="3.2.0" targetFramework="net40" />
+  <package id="Castle.Core" version="3.3.0" targetFramework="net40" />
   <package id="Castle.Windsor" version="3.2.1" targetFramework="net40" />
   <package id="FluentNHibernate" version="1.4.0.0" targetFramework="net40" />
   <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net40" />
@@ -12,6 +12,7 @@
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net40" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net40" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net40" />
