--- a/Src/Zing.Web/packages.config
+++ b/Src/Zing.Web/packages.config
@@ -4,6 +4,7 @@
   <package id="Autofac.Mvc4" version="3.1.0" targetFramework="net40" />
   <package id="AutoMapper" version="3.2.1" targetFramework="net40" />
   <package id="bootstrap" version="3.1.1" targetFramework="net40" />
+  <package id="font-awesome" version="4.1.0" targetFramework="net40" />
   <package id="jQuery" version="1.9.1" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.12.0" targetFramework="net40" />
   <package id="log4net" version="2.0.3" targetFramework="net40" />
@@ -22,5 +23,6 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net40" />
   <package id="routedebugger" version="2.1.4.0" targetFramework="net40" />
+  <package id="WebActivatorEx" version="2.0.5" targetFramework="net40" />
   <package id="WebGrease" version="1.3.0" targetFramework="net40" />
 </packages>
