--- a/Src/Zing.Web/Web.config
+++ b/Src/Zing.Web/Web.config
@@ -71,7 +71,7 @@
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="false">
       <remove name="WarmupHttpModule" />
-      <add name="WarmupHttpModule" type="Orchard.WarmupStarter.WarmupHttpModule, Orchard.WarmupStarter, Version=1.7, Culture=neutral" />
+      <add name="WarmupHttpModule" type="Zing.WarmupStarter.WarmupHttpModule, Zing.WarmupStarter, Version=1.7, Culture=neutral" />
     </modules>
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
