--- a/Src/Zing.Mvc/Zing.Mvc.csproj
+++ b/Src/Zing.Mvc/Zing.Mvc.csproj
@@ -261,21 +261,16 @@
     <Compile Include="Infrastructure\SortDescriptor.cs" />
     <Compile Include="Infrastructure\UrlGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resources\Exceptions.Designer.cs" />
-    <Compile Include="Resources\Messages.bg-BG.Designer.cs" />
-    <Compile Include="Resources\Messages.da-DK.Designer.cs" />
-    <Compile Include="Resources\Messages.de-DE.Designer.cs" />
-    <Compile Include="Resources\Messages.Designer.cs" />
-    <Compile Include="Resources\Messages.es-ES.Designer.cs" />
-    <Compile Include="Resources\Messages.fr-FR.Designer.cs" />
-    <Compile Include="Resources\Messages.nl-NL.Designer.cs" />
-    <Compile Include="Resources\Messages.pl-PL.Designer.cs" />
-    <Compile Include="Resources\Messages.pt-BR.Designer.cs" />
-    <Compile Include="Resources\Messages.pt-PT.Designer.cs" />
-    <Compile Include="Resources\Messages.ro-RO.Designer.cs" />
-    <Compile Include="Resources\Messages.ru-RU.Designer.cs" />
-    <Compile Include="Resources\Messages.uk-UA.Designer.cs" />
-    <Compile Include="Resources\Messages.zh-CN.Designer.cs" />
+    <Compile Include="Resources\Exceptions.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Exceptions.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Resources\Resource1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resource1.resx</DependentUpon>
+    </Compile>
     <Compile Include="SiteMap\PopulateSiteMapAttribute.cs" />
     <Compile Include="SiteMap\SiteMapBase.cs" />
     <Compile Include="SiteMap\SiteMapBuilder.cs" />
@@ -1093,28 +1088,20 @@
     <Compile Include="UI\Window\WindowButtons.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Resources\Exceptions.resx" />
-    <EmbeddedResource Include="Resources\Messages.bg-BG.resx" />
-    <EmbeddedResource Include="Resources\Messages.da-DK.resx" />
-    <EmbeddedResource Include="Resources\Messages.de-DE.resx" />
-    <EmbeddedResource Include="Resources\Messages.es-ES.resx" />
-    <EmbeddedResource Include="Resources\Messages.fr-FR.resx" />
-    <EmbeddedResource Include="Resources\Messages.nl-NL.resx" />
-    <EmbeddedResource Include="Resources\Messages.pl-PL.resx" />
-    <EmbeddedResource Include="Resources\Messages.pt-BR.resx" />
-    <EmbeddedResource Include="Resources\Messages.pt-PT.resx" />
-    <EmbeddedResource Include="Resources\Messages.resx" />
-    <EmbeddedResource Include="Resources\Messages.ro-RO.resx" />
-    <EmbeddedResource Include="Resources\Messages.ru-RU.resx" />
-    <EmbeddedResource Include="Resources\Messages.sv-SE.resx" />
-    <EmbeddedResource Include="Resources\Messages.uk-UA.resx" />
-    <EmbeddedResource Include="Resources\Messages.zh-CN.resx" />
-  </ItemGroup>
-  <ItemGroup>
     <Folder Include="Scripts\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Exceptions.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Exceptions.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Resource1.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resource1.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
