--- a/Src/Zing.Web/Web.config
+++ b/Src/Zing.Web/Web.config
@@ -43,6 +43,7 @@
         <add namespace="System.Linq" />
         <add namespace="System.Collections.Generic" />
         <add namespace="Zing.UI" />
+        <add namespace="Kendo.Mvc.UI"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
@@ -61,6 +62,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
+        <add namespace="Kendo.Mvc.UI"/>
       </namespaces>
     </pages>
 
