--- a/Src/Zing.Web/Zing.Web.csproj
+++ b/Src/Zing.Web/Zing.Web.csproj
@@ -618,6 +618,7 @@
     <Content Include="Views\Home\Pager.cshtml" />
     <Content Include="Views\Pager\Index.cshtml" />
     <Content Include="Views\Home\Grid.cshtml" />
+    <Content Include="Views\Home\IndexTemp.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
