--- a/Src/Zing.Web/Web.config
+++ b/Src/Zing.Web/Web.config
@@ -12,7 +12,7 @@
       <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
     </sectionGroup>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" requirePermission="false" />
-    
+
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -21,9 +21,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="log4net.Config" value="Config\log4net.config" />
-    
-    
-    
+
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" providerName="SqlServer" connectionString="Data Source=phoenix-pc\sql2008_new;Initial Catalog=zing.security;Persist Security Info=True;User ID=sa;Password=sa123" />
@@ -64,19 +62,19 @@
       </namespaces>
     </pages>
 
-    
+
     <httpModules>
       <add name="WarmupHttpModule" type="Zing.WarmupStarter.WarmupHttpModule, Zing.WarmupStarter, Version=1.0.20, Culture=neutral" />
-      
+
     </httpModules>
-    
+
   </system.web>
   <system.webServer>
-
+    <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="false">
       <remove name="WarmupHttpModule" />
       <add name="WarmupHttpModule" type="Zing.WarmupStarter.WarmupHttpModule, Zing.WarmupStarter, Version=1.7, Culture=neutral" />
-      
+
     </modules>
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
@@ -85,9 +83,9 @@
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-      
+
     </handlers>
-    
+
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -139,5 +137,5 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  
+
 </configuration>
