--- a/Src/Zing.Web/Web.config
+++ b/Src/Zing.Web/Web.config
@@ -45,10 +45,13 @@
   </system.web.webPages.razor>
   <system.web>
     <httpRuntime requestValidationMode="2.0" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Logon" timeout="2880"  />
+    </authentication>
     <compilation debug="true" targetFramework="4.0" batch="true" numRecompilesBeforeAppRestart="250" optimizeCompilations="true">
-      <buildProviders>
+      <!--<buildProviders>
         <add extension=".csproj" type="Zing.Environment.Extensions.Compilers.CSharpExtensionBuildProviderShim" />
-      </buildProviders>
+      </buildProviders>-->
     </compilation>
     <pages>
       <namespaces>
@@ -61,20 +64,15 @@
         <add namespace="Kendo.Mvc.UI" />
       </namespaces>
     </pages>
-
-
     <httpModules>
       <add name="WarmupHttpModule" type="Zing.WarmupStarter.WarmupHttpModule, Zing.WarmupStarter, Version=1.0.20, Culture=neutral" />
-
     </httpModules>
-
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="false">
       <remove name="WarmupHttpModule" />
       <add name="WarmupHttpModule" type="Zing.WarmupStarter.WarmupHttpModule, Zing.WarmupStarter, Version=1.7, Culture=neutral" />
-
     </modules>
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
