--- a/Src/Zing.Web/packages.config
+++ b/Src/Zing.Web/packages.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="3.4.0" targetFramework="net40" />
+  <package id="Autofac" version="3.5.0" targetFramework="net40" />
   <package id="Autofac.Mvc4" version="3.1.0" targetFramework="net40" />
   <package id="AutoMapper" version="3.2.1" targetFramework="net40" />
-  <package id="bootstrap" version="3.1.1" targetFramework="net40" />
+  <package id="bootstrap" version="3.2.0" targetFramework="net40" />
   <package id="font-awesome" version="4.1.0" targetFramework="net40" />
   <package id="Iesi.Collections" version="3.2.0.1001" targetFramework="net40" />
   <package id="jQuery" version="1.9.1" targetFramework="net40" />
-  <package id="jQuery.Validation" version="1.12.0" targetFramework="net40" />
+  <package id="jQuery.Validation" version="1.13.0" targetFramework="net40" />
   <package id="log4net" version="2.0.3" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net40" />
@@ -18,12 +18,13 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.Bcl" version="1.1.3" targetFramework="net40" />
-  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.1.2" targetFramework="net40" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.1.2" targetFramework="net40" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.0" targetFramework="net40" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.0" targetFramework="net40" />
   <package id="Microsoft.Net.Http" version="2.2.13" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net40" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net40" />
+  <package id="qTip2" version="2.1.1.1" targetFramework="net40" />
   <package id="WebActivatorEx" version="2.0.5" targetFramework="net40" />
   <package id="WebGrease" version="1.3.0" targetFramework="net40" />
 </packages>
