--- a/Src/Zing.Web/packages.config
+++ b/Src/Zing.Web/packages.config
@@ -18,6 +18,7 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.Bcl" version="1.1.3" targetFramework="net40" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net40" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.0" targetFramework="net40" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.0" targetFramework="net40" />
   <package id="Microsoft.Net.Http" version="2.2.13" targetFramework="net40" />
