--- a/Src/Zing.Web/Web.config
+++ b/Src/Zing.Web/Web.config
@@ -24,7 +24,7 @@
 
   </appSettings>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="SqlServer" connectionString="Data Source=phoenix-pc\sql2008_new;Initial Catalog=zing.security;Persist Security Info=True;User ID=sa;Password=sa123" />
+    <add name="DefaultConnection" providerName="SqlServer" connectionString="Data Source=phoenix;Initial Catalog=zing.security;Persist Security Info=True;User ID=sa;Password=sa" />
   </connectionStrings>
   <system.web.webPages.razor>
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
