--- a/Src/Zing.Web/Modules/Zing.Module/Zing.Modules.csproj
+++ b/Src/Zing.Web/Modules/Zing.Module/Zing.Modules.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Users\Services\MembershipService.cs" />
     <Compile Include="Users\UsersModule.cs" />
     <Compile Include="Users\ViewModels\UserViewModel.cs" />
+    <Compile Include="ViewFilter\IFilterCoordinator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
