--- a/Src/Zing/Zing.Framework.csproj
+++ b/Src/Zing/Zing.Framework.csproj
@@ -78,6 +78,10 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.6\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="NHibernate, Version=4.0.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\NHibernate.4.0.2.4000\lib\net40\NHibernate.dll</HintPath>
@@ -195,11 +199,29 @@
     <Compile Include="Data\Query\DefaultAliasFactory.cs" />
     <Compile Include="Data\Query\DefaultHqlExpressionFactory.cs" />
     <Compile Include="Data\Query\DefaultHqlQuery.cs" />
+    <Compile Include="Data\Query\FilterEditors\DefaultFilterFormater.cs" />
+    <Compile Include="Data\Query\FilterEditors\Forms\IFormProvider.cs" />
+    <Compile Include="Data\Query\FilterEditors\Forms\StringFilterForm.cs" />
+    <Compile Include="Data\Query\FilterEditors\IFilterCoordinator.cs" />
+    <Compile Include="Data\Query\FilterEditors\IFilterEditor.cs" />
+    <Compile Include="Data\Query\FilterEditors\StringFilterEditor.cs" />
+    <Compile Include="Data\Query\Filter\DescribeFilterFor.cs" />
+    <Compile Include="Data\Query\Filter\FilterContext.cs" />
+    <Compile Include="Data\Query\Filter\FilterDescriptor.cs" />
+    <Compile Include="Data\Query\Filter\IMemberBindingProvider.cs" />
+    <Compile Include="Data\Query\Filter\MemberBindingFilter.cs" />
     <Compile Include="Data\Query\IAlias.cs" />
     <Compile Include="Data\Query\IAliasFactory.cs" />
     <Compile Include="Data\Query\IHqlCriterion.cs" />
     <Compile Include="Data\Query\IHqlExpressionFactory.cs" />
     <Compile Include="Data\Query\IHqlQuery.cs" />
+    <Compile Include="Data\Query\Filter\DescribeFilterContext.cs" />
+    <Compile Include="Data\Query\Filter\IFilterProvider.cs" />
+    <Compile Include="Data\Query\Models\FilterGroupRecord.cs" />
+    <Compile Include="Data\Query\Models\FilterRecord.cs" />
+    <Compile Include="Data\Query\Models\QueryRecord.cs" />
+    <Compile Include="Data\Query\Services\HqlQueryManager.cs" />
+    <Compile Include="Data\Query\Services\IHqlQueryManager.cs" />
     <Compile Include="Data\Repository.cs" />
     <Compile Include="Data\SessionConfigurationCache.cs" />
     <Compile Include="Environment\AutofacUtil\ConfigurationSettingsReaderConstants.cs" />
