--- a/Src/Zing/packages.config
+++ b/Src/Zing/packages.config
@@ -17,6 +17,7 @@
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net40" />
   <package id="Microsoft.Net.Http" version="2.2.13" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net40" />
   <package id="NHibernate" version="4.0.2.4000" targetFramework="net40" />
   <package id="NHibernate.Linq" version="1.0" targetFramework="net40" />
 </packages>
